Changelog
=========

5.0-dev - (unreleased)
----------------------

4.9 - (2013-10-07)
------------------
* Feature: major export improvements - image files, cover photo, css
  [simiamih refs #16799]

4.8 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.epub
  [ichimdav refs #15651]

4.7 - (2013-06-17)
------------------
* Change: use BeautifulSoup4 instead of deprecated BS 3
  [tiberich #14584]

4.6 - (2013-01-15)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [ichimdav #9068]
* Feature: register epubs with application/epub+zip mimetype
  [ichimdav #9068]

4.5 - (2012-11-22)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [ichimdav #3621]
* Feature: use filename id when creating plone content, cleaning the filename
  id when it contains illegal characters if boolean property
  clean_epub_filename is enabled at portal_properties/site_properties
  [ichimdav #3621]

4.4 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Change: Change code in eea.epub to fix translation problem
  [prospchr refs #5159]

4.3 - (2012-04-26)
------------------
* Feature: import epubs that are not created by Adobe Indesign which have the
  images and the html pages in separate folder like those created by Sigil
  [ichimdav #5054]

4.2 - (2012-02-06)
------------------
* no changes

4.1 - (2012-02-06)
------------------
* Bug fix: Added dependencies to setup.py
  [voineali]

4.0-dev - (2011-11-06)
----------------------
* Bug fix: proper parsing of html entities by using an html parser instead of
  an xml one
  [ichimdav #4523]
* Bug fix: cleaned spaces defined as &nbsp that can't be read as xml
  [ichimdav #4271]
* Cleanup: fixed all pylint, pyflakes violations
  [voineali #4121]
* Feature: added upgrade steps