@@ -3,6 +3,8 @@ Changelog
 
 5.0-dev - (unreleased)
 ----------------------
+* Feature: epub export uses fallback images for embedded Daviz
+  [simiamih refs #16799]
 
 4.9 - (2013-10-07)
 ------------------
